security: Fix critical client-side API key exposure vulnerabilities
CRITICAL SECURITY FIXES:
- Fixed executeGeminiFallback to use server-side endpoint instead of direct API calls
- Removed API key exposure from vite.config.ts (was bundling keys into client-side JS)
- Removed VITE_GEMINI_API_KEY from example configuration
- Ensured all AI API calls go through server-side endpoints
- Prevented server-side services from being used client-side

This addresses critical security vulnerabilities where:
- API keys were being exposed in client-side JavaScript bundles
- Direct API calls were being made from browser with exposed keys
- Server-side services were being imported into client-side code

All API keys are now properly secured server-side only.

--- a/soen.env.example
+++ b/soen.env.example
@@ -22,8 +22,9 @@ VITE_SUPABASE_ANON_KEY=your_supabase_anon_key_here
 SUPABASE_URL=https://your-project-id.supabase.co
 SUPABASE_SERVICE_ROLE_KEY=your_service_role_key_here
 
-# Client-side Gemini API Key (for fallback)
-VITE_GEMINI_API_KEY=your_gemini_api_key_here
+# Client-side Gemini API Key (for fallback) - REMOVED FOR SECURITY
+# All API calls should go through server-side endpoints
+# VITE_GEMINI_API_KEY=your_gemini_api_key_here
 
 # Encryption Configuration (Server-side only)
 # CRITICAL: These must be set for secure message encryption
