--- a/soen.env.example
+++ b/soen.env.example
@@ -15,9 +15,26 @@ FRONTEND_URL=https://app.soen.com
 # ==============================================
 # SUPABASE CONFIGURATION
 # ==============================================
+VITE_SUPABASE_URL=https://your-project-id.supabase.co
+VITE_SUPABASE_ANON_KEY=your_supabase_anon_key_here
+
+# Server-side Supabase (for API routes)
 SUPABASE_URL=https://your-project-id.supabase.co
-SUPABASE_ANON_KEY=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9...
-SUPABASE_SERVICE_ROLE_KEY=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9...
+SUPABASE_SERVICE_ROLE_KEY=your_service_role_key_here
+
+# Client-side Gemini API Key (for fallback) - REMOVED FOR SECURITY
+# All API calls should go through server-side endpoints
+# VITE_GEMINI_API_KEY=your_gemini_api_key_here
+
+# Encryption Configuration (Server-side only)
+# CRITICAL: These must be set for secure message encryption
+# Generate strong, unique values for production
+ENCRYPTION_KEY=your_encryption_key_here_minimum_32_characters_long
+ENCRYPTION_SALT=your_encryption_salt_here_minimum_32_characters_long
+
+# Server Configuration
+PORT=3001
+USE_AI_ORCHESTRATOR=true
 
 # Supabase Database Configuration
 SUPABASE_DB_HOST=db.your-project-id.supabase.co
@@ -31,20 +48,20 @@ SUPABASE_DB_PASSWORD=your-db-password
 # ==============================================
 
 # OpenAI (Primary AI Service)
-OPENAI_API_KEY=sk-proj-...
+OPENAI_API_KEY=your_openai_api_key_here
 OPENAI_ORG_ID=org-...
 OPENAI_MODEL=gpt-4o-mini
 OPENAI_MAX_TOKENS=4000
 OPENAI_TEMPERATURE=0.7
 
 # Google Gemini (Secondary AI Service)
-GEMINI_API_KEY=AIza...
+GEMINI_API_KEY=your_gemini_api_key_here
 GEMINI_MODEL=gemini-2.5-flash
 GEMINI_MAX_TOKENS=4000
 GEMINI_TEMPERATURE=0.7
 
 # Anthropic Claude (Alternative AI Service)
-ANTHROPIC_API_KEY=sk-ant-...
+ANTHROPIC_API_KEY=your_anthropic_api_key_here
 ANTHROPIC_MODEL=claude-3-5-sonnet-20241022
 ANTHROPIC_MAX_TOKENS=4000
 ANTHROPIC_TEMPERATURE=0.7
@@ -80,7 +97,7 @@ DEEPGRAM_ENCODING=linear16
 DEEPGRAM_SAMPLE_RATE=16000
 
 # OpenAI Realtime API (Voice Conversation)
-OPENAI_REALTIME_API_KEY=sk-proj-...
+OPENAI_REALTIME_API_KEY=your_openai_realtime_api_key_here
 OPENAI_REALTIME_MODEL=gpt-4o-realtime-preview-2024-10-01
 
 # ==============================================
@@ -92,7 +109,7 @@ OPENAI_VISION_MODEL=gpt-4o-mini
 OPENAI_VISION_MAX_TOKENS=4000
 
 # Google Vision API (if using)
-GOOGLE_VISION_API_KEY=AIza...
+GOOGLE_VISION_API_KEY=your_google_vision_api_key_here
 GOOGLE_VISION_PROJECT_ID=your-project-id
 
 # ==============================================
@@ -107,16 +124,16 @@ GOOGLE_CLOUD_PROJECT=your-project-id
 GOOGLE_CLOUD_TOPIC=gmail-notifications
 
 # Notion Integration
-NOTION_API_KEY=secret_...
+NOTION_API_KEY=your_notion_api_key_here
 NOTION_VERSION=2022-06-28
 NOTION_SYNC_INTERVAL=300000
 
 # Google Calendar Integration
-GOOGLE_CALENDAR_API_KEY=AIza...
+GOOGLE_CALENDAR_API_KEY=your_google_calendar_api_key_here
 GOOGLE_CALENDAR_SYNC_INTERVAL=600000
 
 # Google Drive Integration
-GOOGLE_DRIVE_API_KEY=AIza...
+GOOGLE_DRIVE_API_KEY=your_google_drive_api_key_here
 GOOGLE_DRIVE_SYNC_INTERVAL=300000
 
 # ==============================================
