chore: finalize security fixes, server tsx, server-side decryption, cache race fix, env hardening

--- a/soen.env.example
+++ b/soen.env.example
@@ -15,12 +15,22 @@ FRONTEND_URL=https://app.soen.com
 # ==============================================
 # SUPABASE CONFIGURATION
 # ==============================================
+# CRITICAL: These environment variables are REQUIRED for the application to work
+# The application will fail to start if these are not set
+# Never commit actual credentials to version control
+
+# Client-side Supabase configuration (exposed to browser)
 VITE_SUPABASE_URL=https://your-project-id.supabase.co
 VITE_SUPABASE_ANON_KEY=your_supabase_anon_key_here
 
-# Server-side Supabase (for API routes)
+# Server-side Supabase (for API routes - more secure)
 SUPABASE_URL=https://your-project-id.supabase.co
 SUPABASE_SERVICE_ROLE_KEY=your_service_role_key_here
+
+# SECURITY NOTE: 
+# - VITE_ prefixed variables are exposed to the client-side bundle
+# - Only use VITE_ prefix for variables that are safe to expose publicly
+# - The Supabase anon key is designed to be public but should still be kept secure
 
 # Client-side Gemini API Key (for fallback) - REMOVED FOR SECURITY
 # All API calls should go through server-side endpoints
